--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
                     <ul class="slide_view">
                         <li>
                             <div class="main_img">
-                                <h3>스타벅스 50%에<br>
+                                <h3 class="slide-txt">스타벅스 50%에<br>
                                     이동 통신요금 10%할인</h3>
-                                <p>연 최대 36만원 할인,<br>
+                                <p class="slide-subtext">연 최대 36만원 할인,<br>
                                     모니모카드와 함께~</p>
                             </div>
                         </li>
                         <li>
-                            <div class="main_img">
-                                <h3>스타벅스 50%에<br>
-                                    이동 통신요금 10%할인</h3>
-                                <p>연 최대 36만원 할인,<br>
-                                    모니모카드와 함께~</p>
+                            <div class="main_img2">
+                                <h3 class="slide-txt">연 최대 48만원 할인!<br>
+                                    연회비 없는 행복한 카드</h3>
+                                <p class="slide-subtext">쿠팡,이마트 7% 할인 등<br>
+                                    연 최대 48만원 할인 누려요.</p>
                             </div>
                         </li>
                         <li>
-                            <div class="main_img">
-                                <h3>스타벅스 50%에<br>
-                                    이동 통신요금 10%할인</h3>
-                                <p>연 최대 36만원 할인,<br>
-                                    모니모카드와 함께~</p>
+                            <div class="main_img3">
+                                <h3 class="slide-txt">가장 많이 쓰는 곳에서<br>
+                                    30% 자동 맍춤 할인</h3>
+                                <p class="slide-subtext">교통·이동통신·스트리밍도<br>
+                                    10% 할인 받는 삼성 iD ON카드</p>
                             </div>
                         </li>
                     </ul>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                     <div class="my_card_b">
-                        <button class="btn_left"><img src="./imges/free-icon-font-angle-left-3916912.png" width="100%"></button>
+                        <a  href="#" class="btn_left"><img src="./imges/free-icon-font-angle-left-3916912.png" width="100%"></a>
                         <div class="card_slide">
                             <ul>
                                 <li>
@@ -219,9 +219,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <button class="btn_right">
+                        <a href="#" class="btn_right">
                             <img src="./imges/free-icon-font-angle-right-3916907.png" width="100%">
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
